# nfl_draft_app

./: .gitignore  Dockerfile  README.md  app.py  combine_data_unique_athlete_id_step4.csv  config.py  data_loader.py  data_processor.py  main.py  pff_loader.py  plotting.py  pyproject.toml  requirements.txt
assets/: team_logo_map.json
data/: combine_official.csv  combine_official.parquet  combine_pro_day.csv  combine_pro_day.parquet  draft_picks.csv  qb_ppa_data.csv  wr_epa_per_rec.csv
