[project]
name = "nfl-draft-app"
version = "0.1.0"
description = "NFL Draft prospect comparison cards using KNN-based player similarity."
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.9",
    "pandas>=2.0",
    "pillow>=10.0",
    "scikit-learn>=1.6",
    "seaborn>=0.13",
    "scipy>=1.13",
    "numpy>=1.26",
    "streamlit>=1.50.0",
]
